gl31-master/src/test/deca/syntax/invalid/complet/no_second_param.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 10 : Erreur, paramètre non-déclaré après ','
//
// Historique:
//    cree le 19/01/2021
class Test{
    void methodeTest(int param1,){    
    }
}
